Match template.hdbs to the style of Answer Sugg. app
- Added header with name, logo, and minus sign used to toggle the app
- Removed the footer
- Extracted the search bar to be a part of the overall template
- Added translations for the layout, specifically the search bar

--- a/translations/en.json
+++ b/translations/en.json
@@ -10,6 +10,16 @@
       "title": "app name"
     }
   },
+  "layout": {
+    "placeholder_text": {
+      "title": "Placeholder text in the search bar",
+      "value": "Type your search here"
+    },
+    "search_button": {
+      "title": "Search button when clicked triggers a search",
+      "value": "Search"
+    }
+  },
   "loading": {
     "value": "Welcome to this Sample App",
     "title": "loading placeholder"
